test in browser changes

--- a/js/test-in-browser/test.html
+++ b/js/test-in-browser/test.html
@@ -3,6 +3,9 @@
   <meta charset="utf-8">
   <title>Mocha Tests</title>
   <link rel="stylesheet" href="lib/mocha/mocha.css" />
+  <!-- [ i f lt IE 9]>
+    <script src="lib/shim/es5-shim.js"></script>
+  <![endi f ] -->
 </head>
 <body>
   <div id="mocha"></div>
