"in browser" testing environment cosmetic changes, include all the present core tests to the "in browser" testing list

--- a/js/test-in-browser/test-core.html
+++ b/js/test-in-browser/test-core.html
@@ -14,7 +14,7 @@
   <script>mocha.setup('bdd')</script>
   
   
-  <script data-main="main" src="lib/require/require.js"></script>
+  <script data-main="test-core" src="lib/require/require.js"></script>
   
 </body>
 </html>
